# YT_To_Game

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/yttogd/: main--.py  main.py
src/yttogd/LLMS/: groq_llm.py
src/yttogd/Prompt/: ShikarPrompt.py
src/yttogd/ui/: uiconfigfile.ini  uiconfigfile.py
src/yttogd/ui/streamlitui/: load_ui.py
